--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <div class="text-animate">
                 <h3>Electronic Engineer</h3>
             </div>
-            <p>luv BH so much</p>
+            <p>I am an Electronic Engineer with a passion for technology and innovation.
+                 My expertise lies in designing and developing electronic systems that push the boundaries of what is possible.
+                  I am constantly seeking new challenges and opportunities to expand my knowledge and skills in the field.
+                   My goal is to contribute to the advancement of technology and make a positive impact on the world through my work.</p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Hire Me</a>
@@ -55,13 +58,16 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="Images/Crussh.png" alt="">
+            <img src="Images/face.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
 
         <div class="about-content">
             <h3>Electronic Engineer!</h3>
-            <p>Luv BH so much</p>
+            <p>I am an Electronic Engineer with a passion for technology and innovation.
+                 My expertise lies in designing and developing electronic systems that push the boundaries of what is possible.
+                  I am constantly seeking new challenges and opportunities to expand my knowledge and skills in the field.
+                   My goal is to contribute to the advancement of technology and make a positive impact on the world through my work.</p>
 
             <div class="btn-box btns">
                 <a href="#" class="btn">Read More</a>
@@ -80,11 +86,10 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2017-2020</div>
-                            <h3>Nha Trang - University</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2013-2017</div>
+                            <h3>Nguyen Thi Dinh - Junior High School</h3>
+                            <p>I studied at this school and achieved numerous accolades
+                                 in sports and natural science subjects. </p>
                         </div>
                     </div>
                 </div>
@@ -93,10 +98,10 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2021-2022</div>
-                            <h3>Nha Trang - University</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <h3>Le Hong Phong - High School</h3>
+                            <p>Le Hong Phong High School is is the best school in the area where I live.
+                                 I have achieved many accomplishments in computer science here, including obtaining a
+                                  vocational certificate in computer science. </p>
                         </div>
                     </div>
                 </div>
@@ -106,9 +111,8 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023-2024</div>
                             <h3>Nha Trang - University</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <p>I study electrical and electronic engineering, and my strength lies in programming for model design.
+                                 I have achieved numerous accomplishments in this field during my studies. </p>
                         </div>
                     </div>
                 </div>
@@ -121,10 +125,9 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2017-2020</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <h3>Programming Microcontrollers</h3>
+                            <p>I can program nearly all components, and I have the ability to learn new languages quickly.
+                                 Programming is my main expertise and strength.</p>
                         </div>
                     </div>
                 </div>
@@ -133,10 +136,9 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2021-2022</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <h3>Mechanical - Design</h3>
+                            <p>I am capable of designing intricate mechanical structures, but I am not proficient in
+                                 analyzing force distribution within these structures. This aspect is not my main expertise. </p>
                         </div>
                     </div>
                 </div>
@@ -145,10 +147,9 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023-2024</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>Hãy sẵn sàng bước vào hành trình khám phá bí ẩn rùng rợn nằm sâu dưới nấm mồ
-                                  cùng thầy phong thuỷ CHOI MIN SIK, chuyên gia khâm liệm 
-                                  YOO HAI JIN và bộ đôi pháp sư KIM GO EUN & LEE DO HYUN. </p>
+                            <h3>Electronic Circuit - Design</h3>
+                            <p>I am capable of designing various circuits, ranging from simple to complex ones,
+                                 but this skill is not my primary focus.</p>
                         </div>
                     </div>
                 </div>
@@ -167,19 +168,19 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>HTML <span>90%</span></h3>
+                            <h3>C++<span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>CSS <span>80%</span></h3>
+                            <h3>Python<span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>JavaScript <span>65%</span></h3>
+                            <h3>HTML - CSS<span>65%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Python <span>70%</span></h3>
+                            <h3>JavaScript<span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -192,19 +193,19 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>Web Design <span>80%</span></h3>
+                            <h3>Machine Learning<span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Web Development <span>70%</span></h3>
+                            <h3>Microcontroller Programming<span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Graphic Design <span>65%</span></h3>
+                            <h3>Circuit Design <span>65%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>SEO Marketing <span>95%</span></h3>
+                            <h3>Web Design<span>95%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
